update design chnages

--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -11,7 +11,7 @@
         <!-- <span>Resto App</span> -->
         <div class="header_navigation">
             <ul>
-                <li class="mr-20">
+                <!-- <li class="mr-20">
                     <button type="button" [matMenuTriggerFor]="notification" mat-icon-button>
                         <mat-icon matBadgeColor="accent" matBadgePosition="before" matBadge="15">notifications</mat-icon>
                     </button>
@@ -22,7 +22,7 @@
                             <li matRipple>Notification message</li>
                         </ul>
                     </mat-menu>
-                </li>
+                </li> -->
                 <li>
                     <div class="profile_box" [matMenuTriggerFor]="profileMenu" [ngStyle]="{'background-image': imgSrc}"></div>
                     <mat-menu #profileMenu="matMenu" class="notification_menu profile_menu">
