--- a/src/app/admin/settings/branches-setting/branch-list/branch-list.component.html
+++ b/src/app/admin/settings/branches-setting/branch-list/branch-list.component.html
@@ -1,9 +1,10 @@
-<div class="search_outerWrapper text-right mb-20">
+<div class="search_outerWrapper text-right">
     <form>
-        <mat-form-field  appearance="outline" class="ew-250 pb-0">
-            <mat-label>Search</mat-label>
-            <input [formControl]="filterForm.get('searchString')" type="text" matInput>
-            <mat-icon matSuffix>search</mat-icon>
+        <mat-form-field appearance="outline" class="ew-250">
+            <mat-label>Company</mat-label>
+            <mat-select [formControl]="filterForm.get('companyFilter')" (selectionChange)="getAllBranches()">
+                <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+            </mat-select>
         </mat-form-field>
     </form>
 </div>
@@ -15,10 +16,10 @@
             <thead>
                 <tr>
                     <th class="ew-100">Action</th>
-                    <th mat-sort-header="productNumber" class="ew-200">Product No</th>
-                    <th mat-sort-header="productName">Product Name</th>
+                    <th mat-sort-header="branchCode" class="ew-200">Code</th>
+                    <th mat-sort-header="branchTitle">Title</th>
                     <th mat-sort-header="description">Description</th>
-                    <th mat-sort-header="branch" class="ew-250">Branch</th>
+                    <th mat-sort-header="branchAddress" class="ew-250">Address</th>
                     <th class="ew-150">Is Active?</th>
                 </tr>
             </thead>
@@ -30,27 +31,30 @@
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #moreOption="matMenu">
-                                <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
-                                <button mat-menu-item type="button" (click)="deleteProduct(item)"><mat-icon>delete</mat-icon> Delete</button>
+                                <button mat-menu-item type="button" [routerLink]="['/admin/settings/branches/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
+                                <button mat-menu-item type="button" (click)="deleteBranch(item)"><mat-icon>delete</mat-icon>Delete</button>
                             </mat-menu>
                         </td>
                         <td>
-                            {{item.productNumber }}
+                            {{item.branchCode }}
                         </td>
-                        <td>{{item.productName}}</td>
+                        <td>{{item.branchTitle}}</td>
                         <td>
                             {{item.description}}
                         </td>
                         <td>
-                            {{item.branch?.branchTitle }}
+                            {{item.branchAddress }}
                         </td>
                         <td>
                             <mat-slide-toggle (change)="changeStatus(item)" [(ngModel)]="item.isActive"></mat-slide-toggle>
                         </td>
                     </tr>
+                    <tr>
+                        <td colspan="6" *ngIf="dataSource?.data.length <= 0"> No data to display.</td>
+                    </tr>
                 </ng-container>
             </tbody>
         </table>
-        <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllProducts($event.pageIndex+1)"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
     </div>
 </div>
