--- a/src/app/admin/settings/branches-setting/branches-setting.component.html
+++ b/src/app/admin/settings/branches-setting/branches-setting.component.html
@@ -1,60 +1,25 @@
-<div class="page_header d-flex mb-4">
-    <h2 class="header_title">Branch</h2>
-    <div class="ml-auto">
-        <mat-form-field appearance="outline" class="ew-250 mr-15">
-            <mat-label>Company</mat-label>
-            <mat-select [formControl]="filterForm.get('companyFilter')" (selectionChange)="getAllBranches()">
-                <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
-            </mat-select>
-        </mat-form-field>
-        <button mat-raised-button color="primary" routerLink="/admin/settings/branches/update">Add New</button>
-    </div>
+<div class="accont_header_wrapping pa-25">
+    <h2 class="text-uppercase font-weight-500 mb-0 d-flex align-items-center justify-content-between">
+        Branch
+        <!-- <div>
+            <button mat-raised-button color="primary" routerLink="/admin/settings/company/update">Add New</button>
+        </div> -->
+    </h2>
 </div>
-<div class="table_outerWrapper mat-elevation-z2 mt-20">
-    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
-        <!-- Position Column -->
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-                <mat-menu #moreOption="matMenu">
-                    <button mat-menu-item type="button" [routerLink]="['/admin/settings/branches/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item type="button" (click)="deleteBranch(element)"><mat-icon>delete</mat-icon>Delete</button>
-                </mat-menu>
-            </td>
-        </ng-container>
+<div class="account_body_wrapper pl-25 pr-25">
+    <div class="body_inner_card">
+        <div class="tab_header">
+            <div class="tab_btn" routerLink="/admin/settings/branches/list" routerLinkActive="active">
+                <a href="javascript:;">Branch Lists</a>
+            </div>
+            <div class="tab_btn" routerLink="/admin/settings/branches/update" routerLinkActive="active pointer-none">
+                <a href="javascript:;">{{editId?'Branch Product': 'Add Branch'}} </a>
+            </div>
+        </div>
+        <div class="tab_body pa-20">
+            <router-outlet></router-outlet>
+        </div>
+        
+    </div>
 
-        <ng-container matColumnDef="branchCode">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Code </th>
-            <td mat-cell *matCellDef="let element"> {{element.branchCode}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="branchTitle">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.branchTitle}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="branchAddress">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-            <td mat-cell *matCellDef="let element"> {{element.branchAddress}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="isActive">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
-            <td mat-cell *matCellDef="let element"> 
-                <mat-slide-toggle color="accent" (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
 </div>
