--- a/src/app/admin/settings/company-setting/update-company/update-company.component.html
+++ b/src/app/admin/settings/company-setting/update-company/update-company.component.html
@@ -11,19 +11,19 @@
             <div class="col-sm 12 col-md">
                 <div class="row">
                     <div class="col-12">
-                        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                        <mat-form-field  appearance="fill" class="w-100 mb-5">
                             <mat-label>Company Name</mat-label>
                             <input type="text" formControlName="companyName" matInput>
                         </mat-form-field>
                     </div>
                     <div class="col-12">
-                        <mat-form-field appearance="outline" class="w-100 pb-0 mb-15">
+                        <mat-form-field appearance="fill" class="w-100 mb-5">
                             <mat-label>Details</mat-label>
-                            <textarea matInput formControlName="companyDetails" cdkTextareaAutosize></textarea>
+                            <textarea matInput formControlName="companyDetails" rows="3" cdkTextareaAutosize></textarea>
                         </mat-form-field>
                     </div>
                     <div class="col-auto">
-                        <mat-form-field  appearance="outline" class="ew-150 pb-0 mb-15">
+                        <mat-form-field  appearance="fill" class="ew-150 mb-5">
                             <mat-label>Allowed Branches</mat-label>
                             <input type="text" formControlName="numberOfBranchesAllowed" matInput>
                         </mat-form-field>
