--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -76,6 +76,11 @@
                     </a>
                 </li>
                 <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account-management/transaction-history" matRipple>
+                        Transaction History
+                    </a>
+                </li>
+                <li routerLinkActive="active">
                     <a href="javascript:;" routerLink="/admin/account-management/masters" matRipple>
                         Masters
                     </a>
