--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -81,6 +81,11 @@
                     </a>
                 </li>
                 <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account-management/reports" matRipple>
+                        Reports
+                    </a>
+                </li>
+                <li routerLinkActive="active">
                     <a href="javascript:;" routerLink="/admin/account-management/masters" matRipple>
                         Masters
                     </a>
